# harmonizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent  Dockerfile.base  Dockerfile.executor  README.md  docker-compose.yml  justfile  pyproject.toml  wastewater_mixs_metagenome.tsv
docs/: SPREADSHEET_MAPPING_AGENT_PLAN.md
skills/workflow/: nmdc-curation-rules.md  nmdc-env-triad.md  nmdc-taxon-resolution.md  spreadsheet-to-nmdc.md
src/harmonizer/: __init__.py  settings.py
src/harmonizer/agent/: __init__.py  base.py  claude_code_agent.py  factory.py  skills.py
src/harmonizer/database/: __init__.py  models.py  session.py
src/harmonizer/job/: __init__.py  manager.py  setup.py
src/harmonizer/job_container/: __init__.py  runner.py  utils.py
src/harmonizer/orchestrator/: __init__.py  __main__.py  loop.py  prompts.py  report.py
src/harmonizer/providers/: __init__.py  anthropic.py  base.py  cborg.py
src/harmonizer/schema/: __init__.py  submission_schema.py
src/harmonizer/state/: __init__.py  mapping_state.py
src/harmonizer/web/: __init__.py  __main__.py  app.py  helpers.py
src/harmonizer_tools/: __init__.py  __main__.py  execute_code.py  ledger_tools.py  schema_tools.py  server.py  state.py
tests/: conftest.py
tests/agent/: test_factory.py  test_skills.py
tests/database/: test_models.py
tests/job/: test_container_runner.py  test_container_utils.py  test_manager_container_seam.py  test_prepass.py
tests/orchestrator/: test_iteration_prompt.py  test_report_phase.py
tests/providers/: test_anthropic.py  test_cborg.py
tests/schema/: test_submission_schema.py
tests/state/: test_mapping_state.py
tests/tools/: test_execute_code.py  test_ledger_tools.py  test_schema_tools.py  test_server.py
tests/web/: conftest.py  test_job_detail.py  test_new_job_page.py
