[project]
name = "harmonizer"
version = "0.1.0"
description = "Iterative agent that maps arbitrary spreadsheets to the nmdc-submission-schema"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linkml-runtime>=1.8",
    "nmdc-submission-schema>=11.0.0",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harmonizer"]
