[project]
name = "harmonizer"
version = "0.1.0"
description = "Iterative agent that maps arbitrary spreadsheets to the nmdc-submission-schema"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2",
    "fastapi>=0.110",
    "linkml-runtime>=1.8",
    "mcp>=1.0",
    "nicegui>=2.0",
    "nmdc-submission-schema>=11.0.0",
    "oaklib>=0.6",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# harmonizer_tools ships alongside harmonizer as a second top-level package.
# The explicit list is required because harmonizer is installed via a real wheel
# (`uv sync`, non-editable); hatchling's default discovery would only include the
# package matching the project name and silently drop harmonizer_tools.
[tool.hatch.build.targets.wheel]
packages = ["src/harmonizer", "src/harmonizer_tools"]

# The workflow mapping skills (markdown) live at the repo root under skills/ and
# are materialized into each job's .claude/skills/. Ship them in the wheel so an
# installed harmonizer can still locate them.
[tool.hatch.build.targets.wheel.force-include]
"skills" = "skills"
